# chatgpt-in-terminal

./: .env  .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  TODO.md  billing_api_test  chat.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml
gpt_term/: __init__.py  config.ini  locale.py  main.py  main_back.py
gpt_term/Ai/: AiClass.py  OpenAi.py  Poe.py
gpt_term/Utils/: utils.py
gpt_term/locale/: gpt_term.de.yml  gpt_term.en.yml  gpt_term.jp.yml  gpt_term.zh_CN.yml  gpt_term.zh_cn.yml  test.en.yml  test.zh_cn.yml
